update to go and func annotations

--- a/deseq2_analysis.Rmd
+++ b/deseq2_analysis.Rmd
@@ -77,6 +77,8 @@ library(dplyr)
 library(tibble)
 library(data.table)
 library(gridExtra)
+library(stringr)
+library(VennDiagram)
 ```
 
 ```{r}
@@ -154,7 +156,6 @@ dds_Blight <- DESeqDataSetFromHTSeqCount(sampleTable = sampleTable,
                                        design = ~variety + treatment + variety:treatment)
 
 # Removing genes whose counts is less than 10 in total around all the libraries
-# TODO: check why 10
 keep <- rowSums(counts(dds_Blight)) >= 10
 dds_Blight <- dds_Blight[keep,]
 
@@ -354,26 +355,42 @@ grid.arrange(volcano.Duke.Inf, volcano.Duke.Out,
 
 ## Selecting differentially expressed genes (DEG):
 
+First we define some useful filtering/transformation functions:
+
+```{r}
+to_tibble <- function (.data) {
+  data.frame(.data) %>%
+    rownames_to_column(var="gene") %>%
+    as_tibble()
+}
+
+select_degs <- function(.data) {
+  to_tibble(.data) %>%
+    filter(padj < 0.05) %>%
+    filter(abs(log2FoldChange) > 1)
+}
+```
+
 (1)Inf/OutInf vs Mock in each variety. Selection: padj. \< 0.05 & log2FC
 \> 1:
 
 ```{r}
-DEG.Duke.Out  <- res.Duke.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1) 
-DEG.Duke.Inf  <- res.Duke.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1)
-DEG.SMira.Out <- res.SMira.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1) 
-DEG.SMira.Inf <- res.SMira.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1)
-DEG.SShona.Out<- res.SShona.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1) 
-DEG.SShona.Inf<- res.SShona.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1)
+DEG.Duke.Out   <- res.Duke.Out %>% select_degs()
+DEG.Duke.Inf   <- res.Duke.Inf %>% select_degs()
+DEG.SMira.Out  <- res.SMira.Out %>% select_degs()
+DEG.SMira.Inf  <- res.SMira.Inf %>% select_degs()
+DEG.SShona.Out <- res.SShona.Out %>% select_degs()
+DEG.SShona.Inf <- res.SShona.Inf %>% select_degs()
 ```
 
 (2)Tol vs Duke in infected or outinfected area. padj. \< 0.05 & log2FC
 \> 1:
 
 ```{r}
-DEG.SMira_vs_Duke.Out <- res.SMira_vs_Duke.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1) 
-DEG.SMira_vs_Duke.Inf <- res.SMira_vs_Duke.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1) 
-DEG.SShona_vs_Duke.Out<- res.SShona_vs_Duke.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1) 
-DEG.SShona_vs_Duke.Inf<- res.SShona_vs_Duke.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble() %>% filter(padj < 0.05) %>% filter(abs(log2FoldChange) > 1) 
+DEG.SMira_vs_Duke.Out  <- res.SMira_vs_Duke.Out %>% select_degs()
+DEG.SMira_vs_Duke.Inf  <- res.SMira_vs_Duke.Inf %>% select_degs()
+DEG.SShona_vs_Duke.Out <- res.SShona_vs_Duke.Out %>% select_degs()
+DEG.SShona_vs_Duke.Inf <- res.SShona_vs_Duke.Inf %>% select_degs()
 ```
 
 ## Venn diagrams
@@ -415,12 +432,6 @@ DEG.SMira_vs_Duke.Out.DOWN   <- subset(DEG.SMira_vs_Duke.Out, log2FoldChange < -
 DEG.SShona_vs_Duke.Out.UP     <- subset(DEG.SShona_vs_Duke.Out, log2FoldChange > 1)
 DEG.SShona_vs_Duke.Out.DOWN   <- subset(DEG.SShona_vs_Duke.Out, log2FoldChange < -1)
 
-```
-
-Libraries to employ:
-
-```{r}
-library(VennDiagram)
 ```
 
 (1) Venn diagrams of DEG in each variety, Outinfection and Infection:
@@ -639,7 +650,18 @@ grid.arrange(gTree(children = Venn.OutInf.DEG.UP),  gTree(children = Venn.OutInf
 ## Merging DEGs with their gene_description, A.thalina_GeneID, and potatov404geneID:
 
 ```{r}
-library(stringr)
+go_annotations = read.table(file = './analysis-data/DM_1-3_516_R44_potato.v6.1.working_models.go.txt', sep = '\t', header = FALSE)
+go_annotations = go_annotations %>%
+  mutate(gene = str_remove(V2, '\\.\\d+$')) %>%
+  select(V2, gene, V5, V6) %>%
+  rename(transcript_id = V2, GOterm = V5, TAIR = V6)
+```
+
+```{r}
+func_annotations = read.table(file = './analysis-data/DM_1-3_516_R44_potato.v6.1.working_models.func_anno.txt', sep = '\t', header = FALSE)
+func_annotations = func_annotations %>%
+  mutate(gene = str_remove(V1, '\\.\\d+$')) %>%
+  rename(transcript_id = V1, name = V2)
 ```
 
 Data where the descriptions, Athaliana_geneID and v404 link of each gene
@@ -647,7 +669,7 @@ is saved:
 
 ```{r}
 #Genes ID / Names:
-load(file = "./analysis-data/potv6_Ath_potv404.RData") 
+load(file = "./analysis-data/potv6_Ath_potv404.RData")
 #Table: potv6_Ath_potv404
 colnames(potv6_Ath_potv404)[3] <- "gene"
 
@@ -658,6 +680,14 @@ head(potv6_Ath_potv404)
 
 Remember that GeneID_potv6 was linked to Athaliana_ID, and it was linked
 to pot404: GeneID_potv6 -\> Athaliana_ID \<- pot404
+
+```{r}
+go_and_func_enrichment <- function (.data) {
+  merge(merge(.data, go_annotations, by="gene", all.x = T), func_annotations, by="transcript_id", all.x = T) %>%
+    select(-gene.y) %>%
+    rename(gene = gene.x)
+}
+```
 
 Adding annotation names to the result of the comparison:
 
@@ -673,47 +703,48 @@ Adding annotation names to the result of the comparison:
 #DEG_p.SShona.Out.annotation<- merge(DEG_p.SShona.Out, potv6_Ath_potv404, by ="gene", all.x = T)
 
 
-#Adding the annotation to all the DEGs:
-DEG.Duke.Inf.annotation<- merge(DEG.Duke.Inf, potv6_Ath_potv404, by ="gene", all.x = T)
-DEG.Duke.Out.annotation<- merge(DEG.Duke.Out, potv6_Ath_potv404, by ="gene", all.x = T)
+# Adding the annotation to all the DEGs:
+DEG.Duke.Inf.annotation <- go_and_func_enrichment(DEG.Duke.Inf)
+DEG.Duke.Out.annotation <- go_and_func_enrichment(DEG.Duke.Out)
 
-DEG.SMira.Inf.annotation<- merge(DEG.SMira.Inf, potv6_Ath_potv404, by ="gene", all.x = T)
-DEG.SMira.Out.annotation<- merge(DEG.SMira.Out, potv6_Ath_potv404, by ="gene", all.x = T)
+DEG.SMira.Inf.annotation <- go_and_func_enrichment(DEG.SMira.Inf)
+DEG.SMira.Out.annotation <- go_and_func_enrichment(DEG.SMira.Out)
 
-DEG.SShona.Inf.annotation<- merge(DEG.SShona.Inf, potv6_Ath_potv404, by ="gene", all.x = T)
-DEG.SShona.Out.annotation<- merge(DEG.SShona.Out, potv6_Ath_potv404, by ="gene", all.x = T)
+DEG.SShona.Inf.annotation <- go_and_func_enrichment(DEG.SShona.Inf)
+DEG.SShona.Out.annotation <- go_and_func_enrichment(DEG.SShona.Out)
 
-#Adding the annotation to the comparison of TOL vs Duke:
-DEG.SMira_Duke.Out.annotation <- merge(DEG.SMira_vs_Duke.Out, potv6_Ath_potv404, by ="gene", all.x = T) 
-DEG.SMira_Duke.Inf.annotation <- merge(DEG.SMira_vs_Duke.Inf, potv6_Ath_potv404, by ="gene", all.x = T) 
-DEG.SShona_Duke.Out.annotation<- merge(DEG.SShona_vs_Duke.Out, potv6_Ath_potv404, by ="gene", all.x = T) 
-DEG.SShona_Duke.Inf.annotation<- merge(DEG.SShona_vs_Duke.Inf, potv6_Ath_potv404, by ="gene", all.x = T) 
+# Adding the annotation to the comparison of TOL vs Duke:
+DEG.SMira_Duke.Out.annotation  <- go_and_func_enrichment(DEG.SMira_vs_Duke.Out)
+DEG.SMira_Duke.Inf.annotation  <- go_and_func_enrichment(DEG.SMira_vs_Duke.Inf)
 
-#Adding the annotation to the "res":
-res.Duke.Inf.tb   <- res.Duke.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.Duke.Out.tb   <-  res.Duke.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.SMira.Inf.tb  <-  res.SMira.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.SMira.Out.tb  <-  res.SMira.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.SShona.Inf.tb <-  res.SShona.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.SShona.Out.tb <-  res.SShona.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
+DEG.SShona_Duke.Out.annotation <- go_and_func_enrichment(DEG.SShona_vs_Duke.Out)
+DEG.SShona_Duke.Inf.annotation <- go_and_func_enrichment(DEG.SShona_vs_Duke.Inf)
 
-res.Duke.Inf.annotation   <- merge(res.Duke.Inf.tb , potv6_Ath_potv404, by ="gene", all.x = T)
-res.Duke.Out.annotation   <- merge(res.Duke.Out.tb , potv6_Ath_potv404, by ="gene", all.x = T)
-res.SMira.Inf.annotation  <- merge(res.SMira.Inf.tb , potv6_Ath_potv404, by ="gene", all.x = T)
-res.SMira.Out.annotation  <- merge(res.SMira.Out.tb , potv6_Ath_potv404, by ="gene", all.x = T)
-res.SShona.Inf.annotation <- merge(res.SShona.Inf.tb, potv6_Ath_potv404, by ="gene", all.x = T)
-res.SShona.Out.annotation <- merge(res.SShona.Out.tb, potv6_Ath_potv404, by ="gene", all.x = T)
+# Adding the annotation to the "res":
+res.Duke.Inf.tb   <- res.Duke.Inf %>% to_tibble()
+res.Duke.Out.tb   <-  res.Duke.Out %>% to_tibble()
+res.SMira.Inf.tb  <-  res.SMira.Inf %>% to_tibble()
+res.SMira.Out.tb  <-  res.SMira.Out %>% to_tibble()
+res.SShona.Inf.tb <-  res.SShona.Inf %>% to_tibble()
+res.SShona.Out.tb <-  res.SShona.Out %>% to_tibble()
 
-#Adding the annotation to the "res" in the comparison of each TOL vs Duke, in Infected and Outside infected area:
-res.SMira_vs_Duke.Out.tb <- res.SMira_vs_Duke.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.SMira_vs_Duke.Inf.tb <- res.SMira_vs_Duke.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.SShona_vs_Duke.Out.tb<- res.SShona_vs_Duke.Out %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
-res.SShona_vs_Duke.Inf.tb<- res.SShona_vs_Duke.Inf %>% data.frame() %>% rownames_to_column(var="gene") %>% as_tibble()
+res.Duke.Inf.annotation   <- go_and_func_enrichment(res.Duke.Inf.tb)
+res.Duke.Out.annotation   <- go_and_func_enrichment(res.Duke.Out.tb)
+res.SMira.Inf.annotation  <- go_and_func_enrichment(res.SMira.Inf.tb)
+res.SMira.Out.annotation  <- go_and_func_enrichment(res.SMira.Out.tb)
+res.SShona.Inf.annotation <- go_and_func_enrichment(res.SShona.Inf.tb)
+res.SShona.Out.annotation <- go_and_func_enrichment(res.SShona.Out.tb)
 
-res.SMira_vs_Duke.Out.annotation <- merge(res.SMira_vs_Duke.Out.tb, potv6_Ath_potv404, by ="gene", all.x = T)
-res.SMira_vs_Duke.Inf.annotation <- merge(res.SMira_vs_Duke.Inf.tb, potv6_Ath_potv404, by ="gene", all.x = T)
-res.SShona_vs_Duke.Out.annotation<- merge(res.SShona_vs_Duke.Out.tb, potv6_Ath_potv404, by ="gene", all.x = T)
-res.SShona_vs_Duke.Inf.annotation<- merge(res.SShona_vs_Duke.Inf.tb, potv6_Ath_potv404, by ="gene", all.x = T)
+# Adding the annotation to the "res" in the comparison of each TOL vs Duke, in Infected and Outside infected area:
+res.SMira_vs_Duke.Out.tb <- res.SMira_vs_Duke.Out %>% to_tibble()
+res.SMira_vs_Duke.Inf.tb <- res.SMira_vs_Duke.Inf %>% to_tibble()
+res.SShona_vs_Duke.Out.tb<- res.SShona_vs_Duke.Out %>% to_tibble()
+res.SShona_vs_Duke.Inf.tb<- res.SShona_vs_Duke.Inf %>% to_tibble()
+
+res.SMira_vs_Duke.Out.annotation  <- go_and_func_enrichment(res.SMira_vs_Duke.Out.tb)
+res.SMira_vs_Duke.Inf.annotation  <- go_and_func_enrichment(res.SMira_vs_Duke.Inf.tb)
+res.SShona_vs_Duke.Out.annotation <- go_and_func_enrichment(res.SShona_vs_Duke.Out.tb)
+res.SShona_vs_Duke.Inf.annotation <- go_and_func_enrichment(res.SShona_vs_Duke.Inf.tb)
 ```
 
 ## Selecting DEG and DEG_p that are only in the tolerant but not in the susceptible after 48 of infection:
@@ -998,16 +1029,6 @@ Sarpo Mira vs Duke, OutInf48h
 ```{r}
 DEG.SShona_vs_Duke.Out.annotation.up <- unique(subset(DEG.SShona_Duke.Out.annotation, log2FoldChange > 1)[,c(1,3,7,8,10)])
 DEG.SShona_vs_Duke.Out.annotation.down <- unique(subset(DEG.SShona_Duke.Out.annotation, log2FoldChange < -1)[,c(1,3,7,8,10)])
-```
-
-## GSEA
-
-```{r}
-BiocManager::install("GSEABase")
-```
-
-```{r}
-
 ```
 
 ## Saving data:
